2003-10-20  Paolo Maggi  <paolo.maggi@polito.it> 

	* gedit-commands.c (gedit_cmd_help_about): s/Gnome/the GNOME Desktop

2003-10-20  Paolo Maggi  <paolo.maggi@polito.it>

	* Makefile.am (INCLUDES): remove -DGTK_DISABLE_DEPRECATED and
	-DGNOME_DISABLE_DEPRECATED
	
	* dialogs/Makefile.am: ditto

2003-09-26  Paolo Maggi  <paolo.maggi@polito.it>

	*  plugin-manager.glade2: added a label to the About Plugin button
	(fixes bug #117056)

2003-09-26  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit2.c: #include <locale.h>, fixes bug #122790 (thanks to 
	  msuarezalvarez@arnet.com.ar and Ettore Perazzoli)

2003-09-25  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* gedit-plugin.[ch](gedit_plugin_locate_program): added gconf_key and
 	  help_id parameters.
 
 	* dialogs/gedit-dialogs.h (gedit_plugin_program_location_dialog): 
 	* dialogs/gedit-plugin-program-location-dialog.c (gedit_plugin_program_location_dialog):
 	  added gconf_key and help_id parameters.
 
 	This patch is needed to fix bugs #117365 and #117443.
 
 	Thanks to Balamurali Viswanathan <balamurali.viswanathan@wipro.com> for
 	the initial patch.
 
2003-09-18  Paolo Maggi  <paolo.maggi@polito.it>

	* dialogs/gedit-preferences.glade2:
	* dialogs/gedit-preferences-dialog.[ch]: rewritten

	* gedit-commands.c (gedit_cmd_settings_preferences): use the
	  new preferences dialog

	* gedit-document.c (gedit_document_set_language): call 
	  gedit_language_init_tag_styles if needed

	* gedit-languages-manager.c (gedit_get_languages_manager): initialize
	  gconf_client
	  (get_gconf_key)(gdk_color_to_string)(tag_style_to_string)
	  (string_to_tag_style)(gedit_language_set_tag_style
	  (gedit_language_init_tag_styles): new functions

	* gedit-languages-manager.h (gedit_language_set_tag_style)
	  (gedit_language_init_tag_styles): new functions

	* gedit-prefs-manager-app.c (gedit_prefs_manager_right_margin_changed)
	  (gedit_prefs_manager_syntax_hl_enable_changed): new functions
