@@ -1,3 +1,8 @@
+2003-10-20  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* gedit-print.c (preview_finished_cb)(print_finished_cb): fixes
+	bug #124769 (patch by bland@mail.ru)
+
 2003-10-20  Paolo Maggi  <paolo.maggi@polito.it> 
 
 	* gedit-commands.c (gedit_cmd_help_about): s/Gnome/the GNOME Desktop
